# jequi

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO  build.rs  conf.yaml  docker-compose.yml  plugins.txt
.github/workflows/: build.yml  build_jequi.yml  build_jequi_go.yml
api/: Cargo.toml
api/src/: lib.rs
c/: lib.c
docker/jequi/: Dockerfile
docker/jequi-go/: Dockerfile  start.sh
etc/jequi/: conf.yaml
etc/jequi/ssl/: leaf-cert.key  leaf-cert.pem
etc/jequi/static/: index.html
example/: conf.yaml
example/static_files/: conf.yaml
example/static_files/site/: index.html
ffi/: Cargo.toml
ffi/src/: lib.rs
go/handle/: go.mod  main.go
go/jequi/: generate.go  go.mod  main.go  plugin.go
go/jequi_go/: go.mod  request.go  response.go
jequi/: Cargo.toml
jequi/src/: body.rs  config.rs  hijack.rs  http2.rs  lib.rs  request.rs  response.rs  ssl.rs  tcp_stream.rs
jequi/src/http1/: mod.rs  read.rs  test.rs  write.rs
jequi/src/http2/: conn.rs  frame.rs  mod.rs
jequi/src/request/: mod.rs  test.rs
jequi/test/: commands.sh  intermediate.csr  intermediate.key  intermediate.pem  intermediate.srl  leaf-cert.csr  leaf-cert.key  leaf-cert.pem  root-ca.key  root-ca.pem  root-ca.srl  test.conf
plugins/: Cargo.toml
plugins/jequi_go/: .gitignore  Cargo.toml
plugins/jequi_go/go/handle/: handler.go
plugins/jequi_go/go/jequi/: generate.go  go.mod  main.go  plugin.go
plugins/jequi_go/go/jequi_go/: go.mod  request.go  response.go
plugins/jequi_go/src/: lib.rs
plugins/jequi_go/test/: go.mod  main.go
plugins/jequi_proxy/: Cargo.toml
plugins/jequi_proxy/src/: client.rs  lib.rs
plugins/jequi_serve_static/: .gitignore  Cargo.toml
plugins/jequi_serve_static/src/: content_type.rs  lib.rs
plugins/src/: lib.rs
server/: Cargo.toml  build.rs
src/: ffi.rs  lib.rs  main.rs  request.rs  response.rs  ssl.rs  tls.rs
test/: api  catest.key  catest.pem  catest.srl  commands  index.html  intermediate.csr  intermediate.key  leaf-cert.csr  root-ca.key  test.cfg  test.chain  test.crt  test.csr  test.key
test/host/: index.html
test/host/path/: index.html
test/host/uri/: app
test/new/: commands  intermediate.csr  intermediate.ext  intermediate.key  intermediate.pem  intermediate.srl  localhost.chain  localhost.crt  localhost.csr  localhost.ext  localhost.key  rootCA.crt  rootCA.key  rootCA.srl
