[package]
name = "jequi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#openssl = "0.10.41"
openssl = { path = "../rust-openssl/openssl" }
openssl-errors = { path = "../rust-openssl/openssl-errors" }
openssl-macros = { path = "../rust-openssl/openssl-macros" }
openssl-sys = { path = "../rust-openssl/openssl-sys" }
systest = { path = "../rust-openssl/systest" }