[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jequi"
crate-type = ["staticlib", "dylib"]

[dependencies]

jequi = { path = "../jequi" }
jequi_proxy = { path = "../plugins/jequi_proxy" }

