[package]
name = "jequi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jequi"
crate-type = ["lib"]

[dependencies]
bytes = "1.5.0"
serde_yaml = "0.9.25"
serde = { version = "1.0.183", features = ["derive"] }
openssl = "0.10.63"
dyn-clone = "1.0.13"
futures = "0.3.29"
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
tokio-openssl = "0.6.4"
trait-set = "0.3.0"
http = "0.2.9"
byteorder = "1.5.0"
hpack-patched = "0.3.0"
chrono = "0.4"
plugins = { path = "../plugins" }
