[package]
name = "plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plugins"
crate-type = ["lib"]

[build-dependencies]
api = { path = "../api" }

[dependencies]
jequi = { path = "../jequi" }
libloading = "0.8.0"
tokio = { version = "1", features = ["full"] }