[package]
name = "plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plugins"
crate-type = ["lib"]

[build-dependencies]
api = { path = "../api" }

[dependencies]
jequi = { path = "../jequi" }
indexmap = "1.9.1"

jequi_go = { path = "jequi_go" }
jequi_serve_static = { path = "jequi_serve_static" }