[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/jequi.rs"

[build-dependencies]
api = { path = "../api" }

[dependencies]
indexmap = "1.9.1"
jequi = { path = "../jequi" }
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
serde_yaml = "0.9.25"
plugins = { path = "../plugins" }
jequi_go = { path = "../plugins/jequi_go" }
jequi_proxy = { path = "../plugins/jequi_proxy" }
jequi_serve_static = { path = "../plugins/jequi_serve_static" }
