[package]
name = "jequi_go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jequi = { path = "../../jequi" }
serde = {version = "1.0.183",features = ["derive"] }
libloading = "0.8.0"
serde_yaml = "0.9.25"