[package]
name = "jequi_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jequi = { path = "../../jequi" }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9.25"
futures = "0.3.29"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
openssl = "0.10.41"
